--- a/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
+++ b/www.nass.gov.ng/ef6b18214d01ed0a918c52c26cb93865acf3ee63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:23:08 GMT
+    - Thu, 29 Mar 2018 05:31:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8AAYK7NfGyTS%2Cnt5P3VJr1; path=/
+    - PHPSESSID=ICc7hLg%2CWvksi4Qpoazqm3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:23:08 GMT
+recorded_at: Thu, 29 Mar 2018 05:31:00 GMT
