--- a/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
+++ b/www.nass.gov.ng/ebeff1e82e823cabc89e7ee4ace8853c18ae2049.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:25:27 GMT
+    - Thu, 29 Mar 2018 05:33:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aSEDvA5gJcSdL2z-w4k6P2; path=/
+    - PHPSESSID=V-0e76xy4qxJWr%2CQfC5Xo1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:25:27 GMT
+recorded_at: Thu, 29 Mar 2018 05:33:06 GMT
