--- a/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
+++ b/www.nass.gov.ng/735bf46098ada07ab0f2c0e11f8aeaff886cd56c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:32:35 GMT
+    - Thu, 29 Mar 2018 05:42:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hLf%2C8p2jwetxcnowa5uxy2; path=/
+    - PHPSESSID=Fu1rr1xoOTb-wmWatMZTK2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:32:35 GMT
+recorded_at: Thu, 29 Mar 2018 05:42:46 GMT
