--- a/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
+++ b/www.nass.gov.ng/23046b6b514fd6da83765e7baf3a96afd427b821.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:37:58 GMT
+    - Thu, 29 Mar 2018 05:50:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XXH53%2C65-ef96DG-IgMcO3; path=/
+    - PHPSESSID=8xOn4NYbcgYeFtvAH2DJJ1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:37:58 GMT
+recorded_at: Thu, 29 Mar 2018 05:50:16 GMT
