--- a/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
+++ b/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:41:47 GMT
+    - Thu, 29 Mar 2018 05:53:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b85M8PEdV5UZajAvhil101; path=/
+    - PHPSESSID=-%2Ckf%2C6dV9wYJopZeeXMZ01; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:41:47 GMT
+recorded_at: Thu, 29 Mar 2018 05:53:53 GMT
