--- a/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
+++ b/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:46:18 GMT
+    - Thu, 29 Mar 2018 05:59:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MpqMSlZhlpYuP5XQeH5W72; path=/
+    - PHPSESSID=h7PqT9n9qxO1m6kDL9q%2C11; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:46:19 GMT
+recorded_at: Thu, 29 Mar 2018 05:59:45 GMT
