--- a/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
+++ b/www.nass.gov.ng/730dc0a4d841b70c938ae692562efe4079c7aeb7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:53:39 GMT
+    - Thu, 29 Mar 2018 06:08:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uG%2C%2CCP6tpi0EdvFQkO1vE2; path=/
+    - PHPSESSID=Nq2s7oF0w2jk7wnOwAhdy2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:53:39 GMT
+recorded_at: Thu, 29 Mar 2018 06:08:34 GMT
