--- a/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
+++ b/www.nass.gov.ng/42b70e9663a5d4828bdb06c06ceff1fb5d954d6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 06:54:15 GMT
+    - Thu, 29 Mar 2018 06:09:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6uFpTZXmCaih3EDrQkQ3U1; path=/
+    - PHPSESSID=HKMl3DsLai1P6Eq%2CwSOiF1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 06:54:16 GMT
+recorded_at: Thu, 29 Mar 2018 06:09:54 GMT
