--- a/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
+++ b/www.nass.gov.ng/b8e54a41f48c28ee816d37c2fa77504f144d0fcd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:00:51 GMT
+    - Thu, 29 Mar 2018 06:18:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=84eb2CnZz%2CyIOrSw%2ChHyc0; path=/
+    - PHPSESSID=IraQ7Aw61YIWPL5LNTJ9E0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:00:51 GMT
+recorded_at: Thu, 29 Mar 2018 06:18:39 GMT
