--- a/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
+++ b/www.nass.gov.ng/8821244c61cd70440d2ed0fdd828dae0bf200cae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:02:54 GMT
+    - Thu, 29 Mar 2018 06:20:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6KI-%2CJ%2CCqbJXc-UrdXZG30; path=/
+    - PHPSESSID=IJ1OLNd3ZH338pT89PNZA1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:02:54 GMT
+recorded_at: Thu, 29 Mar 2018 06:20:46 GMT
