--- a/www.nass.gov.ng/57075ff9a63cd31d7ad6ac7355069785a6e25c94.yml
+++ b/www.nass.gov.ng/57075ff9a63cd31d7ad6ac7355069785a6e25c94.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:05:54 GMT
+    - Thu, 29 Mar 2018 06:23:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q7MjDtnbWTZ2LS1hoUN2F2; path=/
+    - PHPSESSID=Wf99IdhPHBJ%2CA4VWEpoH%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:05:54 GMT
+recorded_at: Thu, 29 Mar 2018 06:23:52 GMT
