--- a/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
+++ b/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:09:27 GMT
+    - Thu, 29 Mar 2018 06:27:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iioONWh1yadl5t1iR%2C4wD3; path=/
+    - PHPSESSID=oRjVuGGeO%2CUTpOR-LH90x3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:09:27 GMT
+recorded_at: Thu, 29 Mar 2018 06:27:12 GMT
