--- a/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
+++ b/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:15:17 GMT
+    - Thu, 29 Mar 2018 06:33:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fVIG1tur8a2vLrOE%2CjzTc2; path=/
+    - PHPSESSID=2PCmFDyDL-I9Cc-bqNF-U0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:15:17 GMT
+recorded_at: Thu, 29 Mar 2018 06:33:15 GMT
