--- a/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
+++ b/www.nass.gov.ng/a83953caba9e02a64d6d85c06cf870281388857c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:22:01 GMT
+    - Thu, 29 Mar 2018 06:39:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=clMvwTwTbhlZrxq77huGd3; path=/
+    - PHPSESSID=f8UVfU%2C%2CPdjV-QQlh38n80; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:22:01 GMT
+recorded_at: Thu, 29 Mar 2018 06:39:13 GMT
