--- a/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
+++ b/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:31:38 GMT
+    - Thu, 29 Mar 2018 06:51:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=z%2Czew2uaGeC2wL48jkHLH2; path=/
+    - PHPSESSID=k4DFB7m4R-SKup8JuRDLl2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:31:38 GMT
+recorded_at: Thu, 29 Mar 2018 06:51:33 GMT
