--- a/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
+++ b/www.nass.gov.ng/a4003b77df6fd38873a89d54c696100c7906a1df.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:33:51 GMT
+    - Thu, 29 Mar 2018 06:53:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CjzyUiouoSRRCt8YKkS3k1; path=/
+    - PHPSESSID=p2m%2C7QwwzOZogk5QzK%2CCb3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:33:51 GMT
+recorded_at: Thu, 29 Mar 2018 06:53:34 GMT
