--- a/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
+++ b/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:39:31 GMT
+    - Thu, 29 Mar 2018 07:00:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Qt8Xtf%2CkeqC4GUUnwLhF53; path=/
+    - PHPSESSID=Y81E4CEZ3S2QeSqzR7NKg1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:39:31 GMT
+recorded_at: Thu, 29 Mar 2018 07:00:08 GMT
