--- a/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
+++ b/www.nass.gov.ng/0385ba6f7a279d51eebdd3cc262bea272595de68.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:44:14 GMT
+    - Thu, 29 Mar 2018 07:06:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Va4OfglEh3MplGtRrTt%2Cj3; path=/
+    - PHPSESSID=Uu6WW0HK2wZeHy-kLVkBC1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:44:14 GMT
+recorded_at: Thu, 29 Mar 2018 07:06:10 GMT
