--- a/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
+++ b/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:48:57 GMT
+    - Thu, 29 Mar 2018 07:11:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ezWMcw3vkCy2SC%2CHApFNm3; path=/
+    - PHPSESSID=TmC91IOfvikiCit3BSwRP0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:48:57 GMT
+recorded_at: Thu, 29 Mar 2018 07:11:12 GMT
