--- a/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
+++ b/www.nass.gov.ng/5bacf92e04e954fe8d6f24b600b02ca2207f5338.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:50:40 GMT
+    - Thu, 29 Mar 2018 07:13:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WTUgIcgxn-udi8NKCag%2C%2C1; path=/
+    - PHPSESSID=opAxf26dU2vcjmzrJegjF0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:50:40 GMT
+recorded_at: Thu, 29 Mar 2018 07:13:03 GMT
