--- a/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
+++ b/www.nass.gov.ng/9bf9e56df2e1ebc8f03f57d13caff2d43a5ef812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 28 Mar 2018 07:58:32 GMT
+    - Thu, 29 Mar 2018 07:21:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hKCZ9%2C72KgHce4sFIuTcQ0; path=/
+    - PHPSESSID=bX2GduxKVDEouaZK%2CyCOh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 28 Mar 2018 07:58:32 GMT
+recorded_at: Thu, 29 Mar 2018 07:21:25 GMT
