--- a/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
+++ b/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:16:52 GMT
+    - Fri, 30 Mar 2018 16:37:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TwXAWjIwUoAGMN5i3WPUu3; path=/
+    - PHPSESSID=O%2CvaahK5SkNNYf3Bc17oX0; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:16:52 GMT
+recorded_at: Fri, 30 Mar 2018 16:37:56 GMT
