--- a/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
+++ b/www.nass.gov.ng/e174197daa44c102facc93f4d5aa7642108e4694.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:17:49 GMT
+    - Fri, 30 Mar 2018 16:38:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bwbwuXlL%2Cjn8HH3gN1Aol3; path=/
+    - PHPSESSID=qDcOuxKwkNl5zbEwWm5kL0; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:17:50 GMT
+recorded_at: Fri, 30 Mar 2018 16:38:26 GMT
