--- a/www.nass.gov.ng/0cf026d735b0e158d687d66f5ff3f19bdd36d7f3.yml
+++ b/www.nass.gov.ng/0cf026d735b0e158d687d66f5ff3f19bdd36d7f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:18:07 GMT
+    - Fri, 30 Mar 2018 16:38:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=53BwqNIUgbg57nxIujtkO1; path=/
+    - PHPSESSID=ajbXij3YilTm2yhvM%2CdjE0; path=/
     Vary:
     - Accept-Encoding
     Content-Type:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:18:07 GMT
+recorded_at: Fri, 30 Mar 2018 16:38:48 GMT
