--- a/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
+++ b/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 29 Mar 2018 02:20:53 GMT
+    - Fri, 30 Mar 2018 16:41:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KZsZxLGxo%2CNp2tSvuaw5G3; path=/
+    - PHPSESSID=ySbb0bIAiaNXAnfTL6n0T0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 29 Mar 2018 02:20:53 GMT
+recorded_at: Fri, 30 Mar 2018 16:41:22 GMT
